--- a/12_Theme_Multi_Product_Option_2/Views/Shared/_Layout.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Shared/_Layout.cshtml
@@ -52,15 +52,15 @@
             <a href="/product/checkout"><i class="fa fa-shopping-basket" aria-hidden="true"></i> <span class="numberCart spN ">0</span></a>
         </div>
 
-        @*<div class="box-hotline item-fix trans">
+        <div class="box-hotline item-fix trans">
             <label>
-                <a href="tel:01675678192" title="">
+                <a href="tel:@commonInfo.HotLine" title="">
                     <span></span>
-                    <p>Tư vấn miễn phí(24/7)<span>1900 636 099</span></p>
+                    <p>Tư vấn miễn phí(24/7)<span>@Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></p>
                 </a>
                 <i class="close-hotline"></i>
             </label>
-        </div>*@
+        </div>
     </div>
     @Scripts.Render("~/bundle/js")
 
