--- a/12_Theme_Multi_Product_Option_2/Views/Article/Category.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Article/Category.cshtml
@@ -22,7 +22,7 @@
 <div class="box-breadcrumb">
     <div class="container">
         <ul class="hidden-sm hidden-xs">
-            <li><a href="/" target="_self" title="Trang chủ @commonInfo.Name">Trang chủ</a></li>
+            <li><a href="/" target="_self" title="Trang chủ @commonInfo.Name">TRANG CHỦ</a></li>
             <li><a href="/blog">blogs</a></li>
             <li>
                 <span>
