--- a/12_Theme_Multi_Product_Option_2/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -49,22 +49,45 @@
                     </div>
                 <div class="col-md-3 hidden-sm hidden-xs header-user">
 
-                        <div class="box-cart pull-right relative">
-                            <a href="/product/checkout">
+                    <div class="box-cart pull-right relative">
+                        <a href="/product/checkout">
+                            <div class="box">
                                 <div class="box">
-                                    <div class="box">
-                                        <div class="icon">
-                                            <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                        </div>
-                                        <div class="text">
-                                            <span>Giỏ hàng (<span id="cartCount" class="numberCart spN">0</span>)</span>
-                                            <span id="cartPrice" class="sub">0₫</span>
-                                        </div>
+                                    <div class="icon">
+                                        <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="text">
+                                        <span>Giỏ hàng (<span id="cartCount" class="numberCart spN">0</span>)</span>
+                                        <span id="cartPrice" class="sub">0₫</span>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
+                    <div class="pull-right hidden-xs">
+                        <a href="/product/checkout">
+                            <div class="box">
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-youtube" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                    </div>
+                    <div class="pull-right hidden-xs">
+                        <a href="@commonInfo.FaceBookLink">
+                            <div class="box">
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 
                 
                 <div class="overlayMenu"></div>
@@ -78,7 +101,7 @@
             <ul class="nav-navbar">
                 <li class="active  li-child">
                     <a href="#" class="current" title="Trang chủ">
-                        <span>Trang chủ</span>
+                        <span>TRANG CHỦ</span>
                     </a>
                     <ul class="main-child level-2">
 
