--- a/12_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/12_Shop_MultiProduct/Views/Product/List.cshtml
@@ -228,7 +228,8 @@
         </script>
     }
     else
-    { <div class="page_container">
+    { 
+        <div class="page_container">
 
             <div class="breadcrumbs">
                 <div class="container">
