--- a/12_Theme_Multi_Product_Option_2/Views/Home/Index.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Home/Index.cshtml
@@ -31,24 +31,24 @@
     <div class="box-slide-home">
         <div class="container-fluid">
             <div class="row">
-                <div class="main-slide-home">                    
-                        <div class="box-slide-1">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                    @{
-                                        Ads[] slide = (Ads[])ViewBag.Slide;
-                                        for (var i = 0; i < slide.Length; i++)
-                                        {
-                                            <div class="carousel-item @(i == 0 ? "active" : "")">
-                                                <img class="d-block w-100" src="@slide[i].ImagesUrl" alt="@slide[i].Description" style="width:2000px;">
-                                            </div>
-                                        }
+                <div class="main-slide-home">
+                    <div class="box-slide-1">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                @{
+                                    Ads[] slide = (Ads[])ViewBag.Slide;
+                                    for (var i = 0; i < slide.Length; i++)
+                                    {
+                                        <div class="carousel-item @(i == 0 ? "active" : "")">
+                                            <img class="d-block w-100" src="@slide[i].ImagesUrl" alt="@slide[i].Description" style="width:2000px;">
+                                        </div>
                                     }
-                                </div>
-
+                                }
                             </div>
+
                         </div>
-                    
+                    </div>
+
                     <!--bannerSlider-->
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     </div>
 
                 </div>
-                
+
 
                 <div class="owl-carousel owl-carousel-4" id="">
                     @for (var i = 0; i < bestSaleList.Item.Length; i++)
@@ -120,7 +120,7 @@
                                         }
 
                                     </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -132,31 +132,97 @@
     }
 }
 
-@if (ViewData["newestProduct"] != null)
+    @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+    {
+
+        foreach (var items in commonInfo.ProductCategoryList)
+        {
+            AnperoService sv = new AnperoService();
+            AnperoFrontend.WebService.SearchResult newestProduct = sv.GetProductByParentCategory(ViewBag.storeId,ViewBag.TokenKey, items.Id,1,6, 0);
+            if (newestProduct != null && newestProduct.Item.Length > 0)
+            {
+                <div class="box-top-products box-slide">
+                    <div class="container">
+                        <div class="box-title-new">
+                            <div class="title-top">
+                                <h2 class="title">@items.Name</h2>
+                            </div>
+
+                        </div>
+                        <div class="owl-carousel owl-carousel-4" id="">
+                            @for (var i = 0; i < newestProduct.Item.Length; i++)
+                            {
+                                var item = newestProduct.Item[i];
+                                <div class="item box-product">
+                                    <div class="main">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="images">
+                                            @if (item.IsInstock)
+                                            {
+                                                <span class="lable-sale"> mới</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="lable-sold">Hết hàng</span>
+                                            }
+                                            <img src="@item.Images" alt="@item.PrName">
+                                        </a>
+                                        <div class="list-action">
+                                            <a href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè" class="btn-quickview-1"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
+                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="view-product"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                                            @if (item.IsInstock)
+                                            {
+                                                <a href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')" class="add-cart" title="Mua hàng">
+                                                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                                                </a>
+                                            }
+                                            else
+                                            {
+                                                <a href="javascript:void(0);" class="add-cart" title="Mua hàng">
+                                                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                                                </a>
+                                            }
+                                        </div>
+                                        <div class="detail text-center clearfix">
+                                            <h3 class="name">
+                                                <a class="" ref="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                    @item.PrName
+                                                </a>
+                                            </h3>
+                                            <div class="box-prince">
+                                                <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                                @if (item.IsSale)
+                                                {
+                                                    <span class="prince-old">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+                <!--box-top-products-->
+            }
+        }
+
+
+    }
+
+@*@if (ViewData["newestProduct"] != null)
 {
     var newestProduct = (AnperoFrontend.WebService.SearchResult)ViewData["newestProduct"];
     if (newestProduct != null && newestProduct.Item.Length > 0)
-    {
-        <div class="box-top-products box-slide">
+    {*@
+        @*<div class="box-top-products box-slide">
             <div class="container">
                 <div class="box-title-new">
                     <div class="title-top">
                         <h2 class="title">Sản phẩm mới</h2>
                     </div>
-                    
-                </div>
-                <div class="box-title">                    
-                    @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                    {
-                        <ul class="nav-list">
-                            @foreach (var item in commonInfo.ProductCategoryList)
-                            {
-                                <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">@item.Name</a></li>
-                            }
 
-                        </ul>
-                    }
                 </div>
+
 
                 <div class="owl-carousel owl-carousel-4" id="">
                     @for (var i = 0; i < newestProduct.Item.Length; i++)
@@ -210,10 +276,10 @@
                     }
                 </div>
             </div>
-        </div>
+        </div>*@
         <!--box-top-products-->
-    }
-}
+    @*}
+}*@
 
 @if (ViewBag.Ads3 != null)
 {
