--- a/12_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -157,7 +157,7 @@
             <div class="container">
                 <div class="box-title">
                     <h2 class="title">Sản phẩm mới</h2>
-                    @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                    @*@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                     {
                         <ul class="nav-list">
                             @foreach (var item in commonInfo.ProductCategoryList)
@@ -166,7 +166,7 @@
                             }
 
                         </ul>
-                    }
+                    }*@
                 </div>
 
                 <div class="owl-carousel owl-carousel-6" id="">
