update search filter theme 12 v2

--- a/12_Theme_Multi_Product_Option_2/Content/css/dev-style.css
+++ b/12_Theme_Multi_Product_Option_2/Content/css/dev-style.css
@@ -23,6 +23,8 @@
 
 .sidebar_widget__products .widget_header {
     color: #000;
+    border-bottom: 1px solid #e4dfdf;
+    padding-bottom: 8px;
 }
 
 .checkboxlabel {
