--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     @Styles.Render("~/bundle/css")
     @RenderSection("health", required: false)
     @RenderSection("Styles", required: false)
+    <link href='/static/css' rel='stylesheet' type='text/css'>
 </head>
 <body>
     @Html.Partial("_partial/_HeaderPartial")
