--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -44,7 +44,7 @@
                     </div>
                     <ul class="search-notice">
                         <li class="title"><strong>Gợi ý từ khóa:</strong></li>
-                        <li><span>gõ Tiếng Việt có dấu hoặc không dấu đều được</span></li>
+                        <li><span>Bàn thờ ,đồ thờ ,bàn ghế ...</span></li>
                     </ul>
                 </div>
 
