--- a/12_Shop_MultiProduct/Views/Shared/_partial/_FooterPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_FooterPartial.cshtml
@@ -39,33 +39,20 @@
                                         </a>
                                     </li>
                                     <li class="pull-left">
-                                        <a href="//www.twitter.com/share?url=@thisUrl" target="_blank" title="">
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                                        </a>
-                                    </li>
-                                    <li class="pull-left">
                                         <a href="//plus.google.com/share?url=@thisUrl" target="_blank" title="">
                                             <i class="fa fa-google-plus" aria-hidden="true"></i>
                                         </a>
                                     </li>
                                     <li class="pull-left">
-                                        <a href="//pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
+                                        <a href="https://www.youtube.com/channel/UCTTdRMSWbu60Lz4Z8pG9g0w" target="_blank"><i class="fa fa-youtube"></i></a>
                                     </li>
-
                                     <li class="pull-left">
-                                        @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                                        {
-                                            <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
-                                        }
-                                        else
-                                        {
-                                            <a href="#" target="_blank" title="">
-                                                <i class="fa fa-skype" aria-hidden="true"></i>
-                                            </a>
-                                        }
-
+                                        <a href="viber:add?number=@commonInfo.HotLine" target="_blank"><img src="http://media.anpero.com/images/57/62019/viber2019060301225951.png"/></a>
                                     </li>
-
+                                    <li class="pull-left">
+                                        <a href="http://zalo.me/@commonInfo.HotLine " target="_blank"><img src="http://media.anpero.com/images/57/62019/5795232062019060301303227.jpg"/></a>
+                                    </li>
+                                    
                                 </ul>
                             </div>
 
