--- a/10_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -78,13 +78,13 @@
                             <div class="col-xs-12 col-md-4 item_4_1 item_2_1">
                                 <div class="product_item">
                                     <div class="product_img">
-                                        <a class="img_change" href="@Anpero.StringHelpper.GetCategoryLink(item.Name,item.Id)">
+                                        <a class="img_change" href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
                                             <img class="img__1" src="@item.Images" alt="@item.Name">
                                         </a>
                                     </div>
                                     <div class="product_info">
                                         <p class="product_name">
-                                            <a href="@Anpero.StringHelpper.GetCategoryLink(item.Name,item.Id)">@item.Name</a>
+                                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">@item.Name</a>
                                         </p>
                                         <p class="product_desc product_desc__short">
                                             @item.Description
@@ -102,20 +102,21 @@
                 </div>
             </div>
 
-        </div><div id="shopify-section-1547136044015" class="shopify-section section section_divider">
+        </div>
+        <div id="shopify-section-1547136044015" class="shopify-section section section_divider">
             <div class="divider_item container" style="padding-top: 50px;"></div>
             <div class="divider_item tablet_show container" style="padding-top: 50px;"></div>
         </div>
         <div class="shopify-section section section_homepage section_two_banners">
             <div class="container">
-                <div class="row about-news">
+                <div class="row about-news ads1">
 
                     @if (ViewData["ads1"] != null)
                     {
                         Ads[] ads1 = (Ads[])ViewData["ads1"];
                         if (ads1.Count() > 0)
                         {
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 ads1-0">
 
                                 <h2 class="title">Về chúng tôi</h2>
                                 <div class="">
@@ -130,9 +131,9 @@
                             </div>
                             if (ads1.Count() > 1)
                             {
-                                <div class="col-sm-6" id="content-video">
+                                <div class="col-sm-6 ads1-1" id="content-video">
                                     <h2 class="title">Video</h2>
-                                    <div class="caption_text">
+                                    <div class="caption_text" data-close-btn-text="ads1">
                                         @Html.Raw(ads1[1].Description)
                                     </div>
                                 </div>
@@ -154,7 +155,7 @@
                     Ads[] ads2 = (Ads[])ViewData["ads2"];
                     if (ads2.Count() > 0)
                     {
-                        <div class="col-xs-12 timer_item">
+                        <div class="col-xs-12 timer_item ads2-0">
                             <div class="banner_wrap">
                                 <div class="timer_img img_placeholder__wrap" style="background-image: url(@ads2[0].ImagesUrl);">
                                 </div>
@@ -167,7 +168,7 @@
                         </div>
                         if (ads2.Count() > 1)
                         {
-                            <div class="col-xs-12 banner_item">
+                            <div class="col-xs-12 banner_item ads2-1">
                                 <div class="banner_wrap">
                                     <div class="banner_img img_placeholder__wrap" style="background-image: url(@ads2[1].ImagesUrl);"></div>
                                     <div class="banner_caption align_center text_align_center  ">
@@ -185,9 +186,9 @@
 
             </div>
         </div>
-        <div id="shopify-section-1546967621042" class="shopify-section section section_homepage section_logo-list">
+        <div class="shopify-section section section_homepage section_logo-list">
             <div class="container">
-                <h2 class="section_heading">Khách hàng</h2>
+                <h2 class="section_heading ads3">Công trình tiêu biểu</h2>
                 <div class="row">
                     @if (ViewData["ads3"] != null)
                     {
